fix(relevant-rows): TOC overlap with Template List title fix take 2 (#703)
* fix(relevant-rows): add margin to template title when toc is present

* fix(relevant-rows): remove hyphenation and adjust margin logic

* fix(relevant-rows): making room for toc wit placeholder

* fix(relevant-rows): lint error fix

* fix(relevant-rows): line-break code for readability

* fix(relevant-rows): lint

--- a/express/blocks/template-list/template-list.css
+++ b/express/blocks/template-list/template-list.css
@@ -776,8 +776,17 @@ main .template-list-horizontal-fullwidth-mini-container .template-list .template
   margin-bottom: 8px;
 }
 
-main .template-list-horizontal-fullwidth-mini-container.toc-container .template-list .template-title {
-  margin-right: 128px;
+main .template-list-horizontal-fullwidth-mini-container.toc-container .template-list .template-title h2 {
+  -webkit-hyphens: none; /* safari */
+  hyphens: none;
+  display: inline;
+}
+
+main .template-list-horizontal-fullwidth-mini-container.toc-container .template-list .template-title .toc-slot {
+  display: inline;
+  width: 116px;
+  height: 44px;
+  float: right;
 }
 
 main .template-list-horizontal-fullwidth-mini-container .template-list .template-title p:last-of-type {
